# ir-adapter

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
src/ir_adapter/: __init__.py  _naming.py  encode.py  flipper.py  ha.py  signal.py
tests/: test_flipper.py
